--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".GameActivity"  android:screenOrientation="landscape">
+        <activity android:name=".GameActivity"  android:screenOrientation="portrait">
 
         </activity>
     </application>
