--- a/libcocos2dx/build.gradle
+++ b/libcocos2dx/build.gradle
@@ -22,7 +22,7 @@ android {
 }
 
 dependencies {
-    compile files('libs/com.android.vending.expansion.zipfile.jar')
-    compile files('libs/okhttp-3.12.3.jar')
-    compile files('libs/okio-1.15.0.jar')
+    implementation files('libs/com.android.vending.expansion.zipfile.jar')
+    implementation files('libs/okhttp-3.12.3.jar')
+    implementation files('libs/okio-1.15.0.jar')
 }
